feat: adding complete summariser notebook and updated wisdomaiengine.py with new summary function

--- a/SummariseAPI.ipynb
+++ b/SummariseAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get bytes stream of web pdf\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
-    "pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
     "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
-    "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
+    "pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
     "r = requests.get(pdfurl, stream=True)\n",
     "f = io.BytesIO(r.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,32 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extract abstract\n",
     "content = []\n",
-    "cnt = 1\n",
     "for page in PDFPage.get_pages(fp=f, pagenos=pagenos, maxpages=0, caching=True, check_extractable=True):\n",
     "    interpreter.process_page(page)\n",
-    "    print(cnt)\n",
-    "    cnt += 1\n",
     "\n",
     "text = retstr.getvalue()\n",
     "content.append(text)\n",
@@ -92,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,35 +96,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# identify abstract\n",
-    "cnt = 0\n",
-    "while True:\n",
-    "    if \"abstract\" in text[cnt].lower():\n",
-    "        if len(text[cnt].split()) < 2:\n",
-    "            cnt += 1\n",
-    "            break\n",
-    "        else:\n",
-    "            cnt -= 1\n",
-    "    cnt += 1\n",
-    "\n",
-    "text = text[cnt:]"
+    "if \"abstract\" in \" \".join(i for i in text).lower():\n",
+    "    cnt = 0\n",
+    "    while True:\n",
+    "        if \"abstract\" in text[cnt].lower():\n",
+    "            if len(text[cnt].split()) < 2:\n",
+    "                cnt += 1\n",
+    "                break\n",
+    "            else:\n",
+    "                if re.match(\"^abstract\", text[cnt][:8].lower()):\n",
+    "                    text[cnt] = text[cnt][8:]\n",
+    "                break\n",
+    "        cnt += 1\n",
+    "    text = text[cnt:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# identify references\n",
     "cnt = 0\n",
     "while True:\n",
-    "    if \"References\" in text[cnt] or \"Appendix\" in text[cnt] or \"Bibliography\" in text[cnt]:\n",
+    "    if \"References\" in text[cnt] or \"Appendix\" in text[cnt] or \"Bibliography\" in text[cnt] or \"REFERENCES\" in text[cnt] or \"acknowledgements\" in text[cnt] or \"ACKNOWLEDGEMENTS\" in text[cnt]:\n",
     "        if len(text[cnt].split()) < 3:\n",
+    "            break\n",
+    "        if \"\\n\" in text[cnt]:\n",
     "            break\n",
     "    cnt += 1\n",
     "\n",
@@ -151,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,13 +168,19 @@
     "    if len(clean1[cnt].split()) < 10:\n",
     "        dummy = re.sub(\"\\d\", \"\", clean1[cnt])\n",
     "        dummy = dummy.strip()\n",
-    "        if dummy[-1] not in string.punctuation:\n",
+    "        if len(dummy.split()) <= 1:\n",
+    "            pass\n",
+    "        elif dummy[-1] not in string.punctuation:\n",
     "            dummy2 = re.sub(\"\\d\", \"\", clean1[cnt+1])\n",
+    "            dummy2 = re.sub('[^\\w\\s]','', dummy2)\n",
     "            dummy2 = dummy2.strip()\n",
-    "            if dummy2[0].isupper():\n",
-    "                pass\n",
+    "            if dummy2:\n",
+    "                if dummy2[0].isupper():\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    clean2.append(clean1[cnt])\n",
     "            else:\n",
-    "                clean2.append(clean1[cnt])\n",
+    "                pass\n",
     "        else:\n",
     "            clean2.append(clean1[cnt])\n",
     "    else:\n",
@@ -198,69 +190,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove citations\n",
-    "clean3 = \" \".join(c for c in clean2)\n",
-    "clean3 = re.sub(\"^\\[\\d\\]\", \"\", clean3)\n",
-    "clean3 = re.sub(\"^\\[\\d\\d\\]\", \"\", clean3)\n",
-    "clean3 = re.sub(\"^\\[\\d\\d\\]\", \"\", clean3)\n",
-    "clean3 = re.sub(\"\\n\", \" \", clean3)"
+    "# remove figure captions\n",
+    "clean3 = []\n",
+    "cnt = 0\n",
+    "while cnt < len(clean2):\n",
+    "    if re.match('^Fig', clean2[cnt]) or re.match('^fig.', clean2[cnt].lower()) :\n",
+    "        pass\n",
+    "    else:\n",
+    "        clean3.append(clean2[cnt])\n",
+    "    cnt += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I describe an optimal control view of adversarial machine learning, where the dynamical system is the machine learner, the input are adversarial actions, and the control costs are deﬁned by the adversary’s goals to do harm and be hard to detect. \n",
-      "\n",
-      "The system to be controlled is called the plant, which is deﬁned by the system dynamics: where xt ∈ Xt is the state of the system, ut ∈ Ut is the control input, and Ut is the control constraint set. \n",
-      "\n",
-      "The quality of control is speciﬁed by the running cost: which deﬁnes the step-by-step control cost, and the terminal cost for ﬁnite horizon: xt+1 = f (xt, ut) gt(xt, ut) gT (xT ) which deﬁnes the quality of the ﬁnal state. \n",
-      "\n",
-      "In all cases, the adversary attempts to control the machine learning system, and the control costs reﬂect the adversary’s desire to do harm and be hard to detect. \n",
-      "\n",
-      "• The control u0 is a whole training set, for instance u0 = {(xi, yi)}1:n. • The control constraint set U0 consists of training sets available to the adversary; if the adversary can arbitrary modify a training set for supervised learning (including changing features and labels, inserting and deleting items), this could be U0 = ∪∞ n=0(X × Y)n, namely all training sets of all sizes. \n",
-      "\n",
-      "The adversary’s running cost gt then measures the eﬀort in performing the action at step t. One limitation of the optimal control view is that the action cost is assumed to be additive over the steps. \n",
-      "\n",
-      "• The defender’s running cost gt(ht, ut) can simply be 1 to reﬂect the desire for less eﬀort (the running • The defender’s terminal cost gT (hT ) penalizes small margin of the ﬁnal model hT with respect to the cost sums up to k). \n",
-      "\n",
-      "For example, the (α, ψ)-Upper Conﬁdence Bound (UCB) strategy chooses the arm Ti(t − 1)(cid:19) where Ti(t − 1) is the number of times arm i has been pulled up to time t − 1, ˆµi,Ti(t−1) is the empirical mean of arm i so far, and ψ∗ is the dual of a convex function ψ. \n",
-      "\n",
-      "It should be noted that the adversary’s goal may not be the exact opposite of the learner’s goal: the target arm i∗ is not necessarily the one with the worst mean reward, and the adversary may not seek pseudo-regret maximization. \n",
-      "\n",
-      "There are a number of potential beneﬁts in taking the optimal control view: • It oﬀers a uniﬁed conceptual framework for adversarial machine learning; • The optimal control literature provides eﬃcient solutions when the dynamics f is known and one can take the continuous limit to solve the diﬀerential equations [15]; • Reinforcement learning, either model-based with coarse system identiﬁcation or model-free policy it- eration, allows approximate optimal control when f is unknown, as long as the adversary can probe the dynamics [8, 9]; • A generic defense strategy may be to limit the controllability the adversary has over the learner. \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Factual Merge\n",
-    "key_points = 10\n",
+    "# remove table data\n",
+    "clean4 = []\n",
+    "cnt = 0\n",
+    "while cnt < len(clean3)-1:\n",
+    "    if clean3[cnt][-1] == \".\":\n",
+    "        if re.sub(\"\\d\", \"\", clean3[cnt+1]).strip()[0].islower():\n",
+    "            pass\n",
+    "        else:\n",
+    "            clean4.append(clean3[cnt])\n",
+    "    elif clean3[cnt][-1] == \"-\" or clean3[cnt][-1] == \"-\":\n",
+    "        if clean3[cnt+1][0].islower():\n",
+    "            clean4.append(clean3[cnt])\n",
+    "        else:\n",
+    "            pass\n",
+    "    elif \"©\" in clean3[cnt]:\n",
+    "        pass\n",
+    "    else:\n",
+    "        clean4.append(clean3[cnt])\n",
+    "    cnt += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove citations\n",
+    "clean5 = \" \".join(c for c in clean4)\n",
+    "clean5 = re.sub(\"^\\[\\d\\]\", \"\", clean5)\n",
+    "clean5 = re.sub(\"^\\[\\d\\d\\]\", \"\", clean5)\n",
+    "clean5 = re.sub(\"^\\[\\d\\d\\]\", \"\", clean5)\n",
+    "clean5 = re.sub(\"-\\n\", \"\", clean5)\n",
+    "clean5 = re.sub(\"\\n\", \" \", clean5)\n",
+    "clean5 = re.sub(\"  \", \" \", clean5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarisation of top 5 key points\n",
+    "key_points = 5\n",
     "summary = []\n",
-    "blob = TextBlob(clean3)\n",
+    "blob = TextBlob(clean5)\n",
     "sentences = [str(sentence) for sentence in blob.sentences]\n",
     "for sentence in sentences:\n",
     "    if sentence.find(\":\", 0, 1) != -1 and sentence.find(\"-\", 1, 3) != -1:\n",
     "        pass\n",
     "    else:\n",
     "        if len(sentence)>2:\n",
-    "            summary.append(sentence)\n",
-    "            #factual_summary.append(sentence+\".\")\n",
+    "            if len(sentence.split()) < 150:\n",
+    "                summary.append(sentence)\n",
     "parser = PlaintextParser.from_string(' '.join(str(sentence) for sentence in summary), Tokenizer(\"english\"))\n",
     "summarizer = TextRankSummarizer()\n",
     "doc_summary = summarizer(parser.document, key_points)\n",
     "doc_summary = [str(sentence) for sentence in doc_summary]\n",
     "for sent in doc_summary:\n",
     "    print(sent, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wisdomaiengine import summarisepdfdocument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For the 2013 and 2014 episodes, which had the best Swift sampling, we ﬁnd that the correlation between the UV/optical and X-ray ﬂuxes is signiﬁcantly steeper during the decay (soft state) of the outburst than during the rise (hard-to-soft state). \n",
+      "\n",
+      "To have some sense of the X-ray spectral evolution along the outbursts, we include the daily-averaged 15–50 keV light curves obtained from the Swift/BAT transient monitor project (Krimm et al. 2013) and the changes in the hardness ratio (HR) in Figure 1. \n",
+      "\n",
+      "We see that the BAT 15–50 keV peak occurs during the rise of the three outbursts, after which there is a drop of the BAT ﬂux that we can identify with the source entering the soft state. \n",
+      "\n",
+      "It can be seen that at similar X-ray ﬂuxes, the photon index is smaller (i.e. the spectrum is harder) during the rise of the outburst than during the decay, which is likely linked to the peak in the BAT 15–50 keV light curve. \n",
+      "\n",
+      "The decrease of the HR together with the increase of the photon index indicates that the softening seen along the decays of the outbursts is due to a fall of the hard 2.5–10 keV X-rays, and not to an increase of the thermal emission. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
+    "\n",
+    "summary = summarisepdfdocument(pdfurl)\n",
+    "for i in summary:\n",
+    "     print(i, \"\\n\")"
    ]
   },
   {
