feat: seperated extraction of text from summarisation so other API's can use extracted text

--- a/SummariseAPI.ipynb
+++ b/SummariseAPI.ipynb
@@ -280,12 +280,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wisdomaiengine import summarisepdfdocument"
+    "from wisdomaiengine import pdfdocumentextracter, summarisepdfdocument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = pdfdocumentextracter(pdfurl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,14 +329,7 @@
     }
    ],
    "source": [
-    "pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
-    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
-    "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
-    "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
-    "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
-    "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
-    "\n",
-    "summary = summarisepdfdocument(pdfurl)\n",
+    "summary = summarisepdfdocument(text)\n",
     "for i in summary:\n",
     "     print(i, \"\\n\")"
    ]
