fix: fixing wordcloud to work with nested list

--- a/WordCloudAPI.ipynb
+++ b/WordCloudAPI.ipynb
@@ -40,7 +40,7 @@
     "            \"https://arxiv.org/pdf/2001.09412.pdf\",\n",
     "            \"http://arxiv.org/pdf/1411.6753v1\",\n",
     "            \"https://arxiv.org/pdf/2001.10393.pdf\"]:\n",
-    "    corpus.append(pdfdocumentextracter(pdfurl))"
+    "    corpus.append([pdfdocumentextracter(pdfurl)])"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "def frequency_processor(corpus):\n",
-    "    all_text = ' '.join(i for i in corpus)\n",
+    "    all_text = ' '.join(i[0] for i in corpus)\n",
     "    formatted_all_text = all_text.lower()\n",
     "    formatted_all_text = re.sub(r'[^\\w\\s]',' ',formatted_all_text)\n",
     "    formatted_all_text = \" \".join(x for x in formatted_all_text.split() if x not in stop)\n",
@@ -184,18 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
     "for pdfurl in [\"https://arxiv.org/pdf/2001.09903.pdf\"]:\n",
-    "    corpus.append(pdfdocumentextracter(pdfurl))"
+    "    corpus.append([pdfdocumentextracter(pdfurl)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
