--- a/WordCloudAPI.ipynb
+++ b/WordCloudAPI.ipynb
@@ -189,7 +189,11 @@
    "outputs": [],
    "source": [
     "corpus = []\n",
-    "for pdfurl in [\"https://arxiv.org/pdf/2001.09903.pdf\"]:\n",
+    "for pdfurl in [\"https://arxiv.org/pdf/2001.09903.pdf\", \"http://arxiv.org/pdf/1811.04422v1\",\n",
+    "            \"https://arxiv.org/pdf/2001.09956\",\n",
+    "            \"https://arxiv.org/pdf/2001.09412.pdf\",\n",
+    "            \"http://arxiv.org/pdf/1411.6753v1\",\n",
+    "            \"https://arxiv.org/pdf/2001.10393.pdf\"]:\n",
     "    corpus.append([pdfdocumentextracter(pdfurl)])"
    ]
   },
@@ -211,16 +215,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "outburst  -  57.60532022606475\n",
-      "ray  -  50.124016458243645\n",
-      "emission  -  40.035536662232005\n",
-      "optical  -  38.65305966459018\n",
-      "aql  -  38.562574190707245\n",
-      "accretion  -  34.09103986456174\n",
-      "star  -  34.01852194787096\n",
-      "kev  -  31.40874999400895\n",
-      "lmxbs  -  29.2208913124815\n",
-      "observation  -  27.12220296926123\n"
+      "workload  -  367.4530568874348\n",
+      "function  -  285.74233222308806\n",
+      "time  -  283.981347705732\n",
+      "learner  -  271.43756804236364\n",
+      "teaching  -  269.5531844420284\n",
+      "hypothesis  -  249.3064681858038\n",
+      "set  -  239.40933335760133\n",
+      "data  -  237.23523366473847\n",
+      "service  -  213.382693334224\n",
+      "color  -  208.35012582040412\n"
      ]
     }
    ],
