fix: reformatting return objects for UI

--- a/TopicsAPI.ipynb
+++ b/TopicsAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
     "if final_topics[0][0] == \"\":\n",
     "    final_topics = None\n",
     "else:\n",
-    "    final_topics = [' + '.join(word for word in topic) for topic in final_topics]"
+    "    final_topics = [' '.join(word for word in topic) for topic in final_topics]"
    ]
   },
   {
@@ -187,21 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
+    "pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
     "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
-    "pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
     "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,17 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['transfer + indeed + input + individual + indicates',\n",
-       " 'function + color + q + quasiparticle + distribution']"
+       "['mediumlow mata momentum measured monitor', 'outburst xray aql x1 emission']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
