--- a/WordCloudAPI.ipynb
+++ b/WordCloudAPI.ipynb
@@ -35,11 +35,12 @@
    "outputs": [],
    "source": [
     "corpus = []\n",
-    "for pdfurl in [\"https://arxiv.org/pdf/2001.09903.pdf\", \"http://arxiv.org/pdf/1811.04422v1\",\n",
-    "            \"https://arxiv.org/pdf/2001.09956\",\n",
-    "            \"https://arxiv.org/pdf/2001.09412.pdf\",\n",
-    "            \"http://arxiv.org/pdf/1411.6753v1\",\n",
-    "            \"https://arxiv.org/pdf/2001.10393.pdf\"]:\n",
+    "# for pdfurl in [\"https://arxiv.org/pdf/2001.09903.pdf\", \"http://arxiv.org/pdf/1811.04422v1\",\n",
+    "#             \"https://arxiv.org/pdf/2001.09956\",\n",
+    "#             \"https://arxiv.org/pdf/2001.09412.pdf\",\n",
+    "#             \"http://arxiv.org/pdf/1411.6753v1\",\n",
+    "#             \"https://arxiv.org/pdf/2001.10393.pdf\"]:\n",
+    "for pdfurl in [\"https://arxiv.org/pdf/2001.09903.pdf\"]:\n",
     "    corpus.append([pdfdocumentextracter(pdfurl)])"
    ]
   },
@@ -143,7 +144,7 @@
     "            if thresh>0:\n",
     "                counter1+=1\n",
     "            else:\n",
-    "                important_words.append([word, value[0]])\n",
+    "                important_words.append(word)\n",
     "                counter1+=1\n",
     "                counter2+=1\n",
     "        if important_words[0] == \"\":\n",
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,26 +209,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "workload  -  367.4530568874348\n",
-      "function  -  285.74233222308806\n",
-      "time  -  283.981347705732\n",
-      "learner  -  271.43756804236364\n",
-      "teaching  -  269.5531844420284\n",
-      "hypothesis  -  249.3064681858038\n",
-      "set  -  239.40933335760133\n",
-      "data  -  237.23523366473847\n",
-      "service  -  213.382693334224\n",
-      "color  -  208.35012582040412\n"
+      "workload\n",
+      "function\n",
+      "time\n",
+      "learner\n",
+      "teaching\n",
+      "hypothesis\n",
+      "set\n",
+      "data\n",
+      "service\n",
+      "color\n"
      ]
     }
    ],
+   "source": [
+    "for i in words:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for word in words:\n",
     "    print(word[0], \" - \", word[1])"
