--- a/SummariseAPI.ipynb
+++ b/SummariseAPI.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,31 +317,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the 2013 and 2014 episodes, which had the best Swift sampling, we ﬁnd that the correlation between the UV/optical and X-ray ﬂuxes is signiﬁcantly steeper during the decay (soft state) of the outburst than during the rise (hard-to-soft state). \n",
-      "\n",
-      "For each of our selected observations, we obtained the X-ray spectra and the associated response ﬁles using the online XRT data products tool1, which uses the latest version of the Swift software and calibration (Evans et al. 2009). \n",
-      "\n",
-      "We searched the Swift data archive for outbursts of Aql X-1 that had i) good sampling of the entire outburst with the X-ray Telescope (XRT) and ii) observations in one or more UV ﬁlters on the UltraViolet and Optical Telescope (UVOT) consistently taken along the entire outburst. \n",
-      "\n",
-      "To have some sense of the X-ray spectral evolution along the outbursts, we include the daily-averaged 15–50 keV light curves obtained from the Swift/BAT transient monitor project (Krimm et al. 2013) and the changes in the hardness ratio (HR) in Figure 1. \n",
-      "\n",
-      "We see that the BAT 15–50 keV peak occurs during the rise of the three outbursts, after which there is a drop of the BAT ﬂux that we can identify with the source entering the soft state. \n",
-      "\n"
+      "For the 2013 and 2014 episodes, which had the best Swift sampling, we ﬁnd that the correlation between the UV/optical and X-ray ﬂuxes is signiﬁcantly steeper during the decay (soft state) of the outburst than during the rise (hard-to-soft state). For each of our selected observations, we obtained the X-ray spectra and the associated response ﬁles using the online XRT data products tool1, which uses the latest version of the Swift software and calibration (Evans et al. 2009). We searched the Swift data archive for outbursts of Aql X-1 that had i) good sampling of the entire outburst with the X-ray Telescope (XRT) and ii) observations in one or more UV ﬁlters on the UltraViolet and Optical Telescope (UVOT) consistently taken along the entire outburst. To have some sense of the X-ray spectral evolution along the outbursts, we include the daily-averaged 15–50 keV light curves obtained from the Swift/BAT transient monitor project (Krimm et al. 2013) and the changes in the hardness ratio (HR) in Figure 1. We see that the BAT 15–50 keV peak occurs during the rise of the three outbursts, after which there is a drop of the BAT ﬂux that we can identify with the source entering the soft state.\n"
      ]
     }
    ],
    "source": [
     "summary = summarisepdfdocument(text)\n",
+    "print(summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = summarisepdfdocument(text)\n",
     "for i in summary:\n",
     "     print(i, \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
